# lambda-agent-builder-template

./: .gitignore  README.md  zappa_settings.json
.cursor/rules/: coding-patterns.mdc  coding-style.mdc  important-things.mdc  tech-stack.mdc
core/: config.py
core/utils/: logger.py
cursor_templates/: agent-index.md  agent.md  rulebook-index.md  rulebook.md
cursor_templates/agent/: capabilities.md  identity.md  limitations.md
cursor_templates/rulebook/: documentation-testing.md  execution-priorities.md  general-principles.md  project-guidelines.md  (+3 more)
metadata/: cursor.json  python.json
python_templates/aws_lambda_agent_builder/: README.md  lambda_handler.py  main.py  pyproject.toml
python_templates/aws_lambda_agent_builder/core/: agent.py  config.py
python_templates/aws_lambda_agent_builder/core/chains/: base.py
python_templates/aws_lambda_agent_builder/core/tools/: base.py
python_templates/aws_lambda_agent_builder/core/utils/: asgi_to_wsgi.py  logger.py
python_templates/aws_lambda_agent_builder/scripts/: application_start.sh  generate_env.sh
python_templates/aws_lambda_fast_api/: .gitignore  README.md  lambda_handler.py  main.py  pyproject.toml  zappa_settings.json
python_templates/aws_lambda_fast_api/api/: api.py
python_templates/aws_lambda_fast_api/api/v1/: api.py
python_templates/aws_lambda_fast_api/api/v1/endpoints/: health.py
python_templates/aws_lambda_fast_api/core/: agent.py  config.py
python_templates/aws_lambda_fast_api/core/chains/: base.py
python_templates/aws_lambda_fast_api/core/errors/: http_error.py
python_templates/aws_lambda_fast_api/core/utils/: asgi_to_wsgi.py  logger.py
python_templates/aws_lambda_fast_api/scripts/: before_install.sh  validate_service.sh
