[project]
name = "lambda-agent-builder-template"
version = "0.1.0"
description = "Template for building AI agents with Python, AWS Lambda, FastAPI, and LangChain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "langchain-core>=0.3.43",
    "langchain-openai>=0.3.8",
    "langgraph>=0.3.5",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "setuptools>=76.0.0",
    "uvicorn>=0.34.0",
    "zappa>=0.59.0",
    "mangum>=0.17.0",
    "pydantic>=2.6.3",
    "pydantic-settings>=2.2.1",
    "loguru>=0.7.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "B"]
ignore = []

[tool.ruff.isort]
known-first-party = ["core"]
